@@ -1,0 +1,125 @@
+### OpenCOBOL Test Suite				-*- m4 -*-
+
+## Copyright (C) 2003 Keisuke Nishida
+##
+## This program is free software; you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published by
+## the Free Software Foundation; either version 2, or (at your option)
+## any later version.
+## 
+## This program is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+## 
+## You should have received a copy of the GNU General Public License
+## along with this software; see the file COPYING.  If not, write to
+## the Free Software Foundation, Inc., 59 Temple Place, Suite 330,
+## Boston, MA 02111-1307 USA
+
+### ISO+IEC+1989-2002 13.16.36 OCCURS clause
+
+
+## 13.16.36.2 Syntax rules
+
+# 1) TODO
+
+AT_SETUP([OCCURS with level 01, 66, 77, and 88])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 X-01          PIC X OCCURS 10.
+       01 G             OCCURS 10.
+         02 X-02        PIC X OCCURS 10.
+         66 X-66        RENAMES X-02 OCCURS 10.
+       77 X-77          PIC X OCCURS 10.
+       88 X-88          VALUE "X" OCCURS 10.
+])
+
+AT_CHECK([${COMPILE_ONLY} prog.cob], [1], ,
+[prog.cob:11: level 88 item `X-88' cannot have other than VALUE clause
+prog.cob:6: level 01 item `X-01' cannot have OCCURS clause
+prog.cob:7: level 01 item `G' cannot have OCCURS clause
+prog.cob:9: level 66 item `X-66' cannot have other than RENAMES clause
+prog.cob:10: level 77 item `X-77' cannot have OCCURS clause
+])
+
+AT_CLEANUP
+
+# 2) TODO
+
+# 3) TODO
+
+# 4) TODO
+
+# 5) TODO
+
+# 6) TODO
+
+# 7) TODO
+
+# 8) TODO
+
+# 9) TODO
+
+# 10) TODO
+
+# 11) TODO
+
+# 12) TODO
+
+# 13) TODO
+
+# 14) TODO
+
+# 15) TODO
+
+# 16) TODO
+
+# 17) TODO
+
+# 18) TODO
+
+# 19) TODO
+
+# 20) TODO
+
+# 21) TODO
+
+# 22) TODO
+
+# 23) TODO
+
+# 24) TODO
+
+
+## 13.16.36.3 General rules
+
+# 1) TODO
+
+# 2) TODO
+
+# 3) TODO
+
+# 4) TODO
+
+# 5) TODO
+
+# 6) TODO
+
+# 7) TODO
+
+# 8) TODO
+
+# 9) TODO
+
+# 10) TODO
+
+# 11) TODO
+
+# 12) TODO
+
+# 13) TODO
